feat: Added medical records endpoint
