# cmd/openhealth-api/main.go
@@ -8,6 +8,7 @@ import (
 	"openhealth/internal/service/accounts"
 	"openhealth/internal/service/doctors"
 	"openhealth/internal/service/hospitals"
+	"openhealth/internal/service/medical-records"
 	"openhealth/internal/service/nurses"
 	"os"
 )
@@ -25,8 +26,9 @@ func main() {
 	doctorSVC := doctors.NewService(tx, repository)
 	nurseSVC := nurses.NewService(tx, repository)
 	hospitalSVC := hospitals.NewService(tx, repository)
+	medicalRecordSVC := medicalrecords.NewService(tx, repository)
 
 	// SERVER
-	server := http.NewServer(domain.APIName, domain.APIVersion, os.Getenv("PORT"), accountSVC, doctorSVC, nurseSVC, hospitalSVC)
+	server := http.NewServer(domain.APIName, domain.APIVersion, os.Getenv("PORT"), accountSVC, doctorSVC, nurseSVC, hospitalSVC, medicalRecordSVC)
 	server.Start()
 }
